//
//  Extension.swift
//  TripDo
//
//  Created by 요한 on 2020/08/01.
//  Copyright © 2020 요한. All rights reserved.
//

import UIKit

// MARK: - Hide Keyboard

extension UIViewController {
  func hideKeyboard() {
    let tap: UITapGestureRecognizer = UITapGestureRecognizer(
      target: self,
      action: #selector(UIViewController.dismissKeyboard))
    view.addGestureRecognizer(tap)
  }
  @objc func dismissKeyboard() {
    view.endEditing(true)
  }
}

enum FontType {
  case regular, bold, medium, light, semibold
}

extension UIFont {
  static func fontWithName(type: FontType, size: CGFloat) -> UIFont {
    var fontName = ""
    switch type {
    case .regular:
      fontName = "AppleSDGothicNeo-Regular"
    case .light:
      fontName = "AppleSDGothicNeo-Light"
    case .medium:
      fontName = "AppleSDGothicNeo-Medium"
    case .semibold:
      fontName = "AppleSDGothicNeo-SemiBold"
    case .bold:
      fontName = "AppleSDGothicNeo-Bold"
    }
    
    return UIFont(name: fontName, size: size) ?? UIFont.systemFont(ofSize: size)
  }
}

// MARK: - UITextField Padding

extension UITextField {
  func addLeftPadding() {
    let paddingView = UIView(frame: CGRect(x: 0, y: 0, width: 20, height: self.frame.height))
    self.leftView = paddingView
    self.leftViewMode = ViewMode.always
  }
}

// MARK: - ShowAlert

extension UIViewController {
  //Show a basic alert
  func showAlert(alertText : String, alertMessage : String) {
    let alert = UIAlertController(title: alertText, message: alertMessage, preferredStyle: UIAlertController.Style.alert)
    alert.addAction(UIAlertAction(title: "확인", style: UIAlertAction.Style.default, handler: nil))
    //Add more actions as you see fit
    self.present(alert, animated: true, completion: nil)
  }
}
