...
  let tripNameTextField: UITextField = {
    let tf = UITextField()
    tf.layer.cornerRadius = 14
    tf.backgroundColor = Common.mainColor
    Common.shadowMaker(view: tf)
    
    tf.attributedPlaceholder = NSAttributedString(string: "ex) 1박 2일 서울투어 !!", attributes: [NSAttributedString.Key.foregroundColor: Common.subColor.withAlphaComponent(0.5)])
    tf.textColor = Common.subColor
    tf.tintColor = Common.edgeColor
    tf.font = UIFont.preferredFont(forTextStyle: .title2)
    tf.addLeftPadding()
    
    return tf
...
