...
      titleLabel.text = "이제,\n여행 날짜설정이\n완료되었습니다."
      print(selectionArray)
      print("first: ",selectionArray.sorted().first!)
      print("last: ",selectionArray.sorted().last!)
      nextButton.isEnabled = true
      nextButton.alpha = 1
      showAlert(alertText: "여행 날자를 확인하세요.", alertMessage: "시작 날짜 : \(selectionArray.sorted().first!)\n종료 날짜 \(selectionArray.sorted().last!)")
    default:
      break;
    }
  }
}

...
